# cmake-templates

./: README.adoc
minimal/: CMakeLists.txt  main.cpp
simple/: .gitignore  .gitmodules  CMakeLists.txt  README.adoc
simple/cmake/: FindOrFetch.cmake
simple/lib/: README.md
simple/src/: CMakeLists.txt  application.cpp  library.cpp  library.h
simple/test/: CMakeLists.txt  library_test.cpp  test-library.cpp
standard/: .gitignore  .gitmodules  CMakeLists.txt  README.adoc
standard/docs/: CMakeLists.txt  Doxyfile.in
standard/src/: CMakeLists.txt
standard/src/calculator/: CMakeLists.txt  calculator.cpp
standard/src/mathlib/: CMakeLists.txt  mathlib.cpp  mathlib.h
standard/test/: CMakeLists.txt
standard/test/mathlib/: factorial.cpp  fibbonachi.cpp
